// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AudioOutputMenu /> renders the audio output menu 1`] = `
<Fragment>
  <DeviceMenu
    audio="media"
    devices={
      Array [
        Object {
          "id": "default",
          "isActive": false,
          "label": "Default",
        },
        Object {
          "id": "aead4bb457d9b0aeeddb669d8e6fef68d9cf2379d25264d6948af1dbdea3259b",
          "isActive": false,
          "label": "Built-in Audio Analog Stereo",
        },
        Object {
          "id": "6d4096a33f2ba164d976a9929c3936b2956644e0581085c8870c4272782db9fb",
          "isActive": false,
          "label": "Plantronics C320 Analog Stereo",
        },
        Object {
          "id": "807fbf9ab5fd57290d125721e10edaab372b2c52569513de20934e0a14971957",
          "isActive": true,
          "label": "USG PnIXAu20o  Analog Stereo",
        },
      ]
    }
    label={
      Object {
        "defaultMessage": "Media",
        "id": "app.containers.AudioOutputMenu.media",
      }
    }
    setDeviceAsActive={[Function]}
  />
  <DeviceMenu
    audio="ringtone"
    devices={
      Array [
        Object {
          "id": "default",
          "isActive": false,
          "label": "Default",
        },
        Object {
          "id": "aead4bb457d9b0aeeddb669d8e6fef68d9cf2379d25264d6948af1dbdea3259b",
          "isActive": false,
          "label": "Built-in Audio Analog Stereo",
        },
        Object {
          "id": "6d4096a33f2ba164d976a9929c3936b2956644e0581085c8870c4272782db9fb",
          "isActive": false,
          "label": "Plantronics C320 Analog Stereo",
        },
        Object {
          "id": "807fbf9ab5fd57290d125721e10edaab372b2c52569513de20934e0a14971957",
          "isActive": true,
          "label": "USG PnIXAu20o  Analog Stereo",
        },
      ]
    }
    label={
      Object {
        "defaultMessage": "Ringtone",
        "id": "app.containers.AudioOutputMenu.ringtone",
      }
    }
    setDeviceAsActive={[Function]}
  />
  <DeviceMenu
    audio="voice"
    devices={
      Array [
        Object {
          "id": "default",
          "isActive": false,
          "label": "Default",
        },
        Object {
          "id": "aead4bb457d9b0aeeddb669d8e6fef68d9cf2379d25264d6948af1dbdea3259b",
          "isActive": false,
          "label": "Built-in Audio Analog Stereo",
        },
        Object {
          "id": "6d4096a33f2ba164d976a9929c3936b2956644e0581085c8870c4272782db9fb",
          "isActive": true,
          "label": "Plantronics C320 Analog Stereo",
        },
        Object {
          "id": "807fbf9ab5fd57290d125721e10edaab372b2c52569513de20934e0a14971957",
          "isActive": false,
          "label": "USG PnIXAu20o  Analog Stereo",
        },
      ]
    }
    label={
      Object {
        "defaultMessage": "Voice",
        "id": "app.containers.AudioOutputMenu.voice",
      }
    }
    setDeviceAsActive={[Function]}
  />
</Fragment>
`;

exports[`<AudioOutputMenu /> renders the audio output menu when crmModule is not zendesk and notifications are not enabled in toolbar mode 1`] = `
<Fragment>
  <DeviceMenu
    audio="ringtone"
    devices={
      Array [
        Object {
          "id": "default",
          "isActive": false,
          "label": "Default",
        },
        Object {
          "id": "aead4bb457d9b0aeeddb669d8e6fef68d9cf2379d25264d6948af1dbdea3259b",
          "isActive": false,
          "label": "Built-in Audio Analog Stereo",
        },
        Object {
          "id": "6d4096a33f2ba164d976a9929c3936b2956644e0581085c8870c4272782db9fb",
          "isActive": false,
          "label": "Plantronics C320 Analog Stereo",
        },
        Object {
          "id": "807fbf9ab5fd57290d125721e10edaab372b2c52569513de20934e0a14971957",
          "isActive": true,
          "label": "USG PnIXAu20o  Analog Stereo",
        },
      ]
    }
    label={
      Object {
        "defaultMessage": "Ringtone",
        "id": "app.containers.AudioOutputMenu.ringtone",
      }
    }
    setDeviceAsActive={[Function]}
  />
  <DeviceMenu
    audio="voice"
    devices={
      Array [
        Object {
          "id": "default",
          "isActive": false,
          "label": "Default",
        },
        Object {
          "id": "aead4bb457d9b0aeeddb669d8e6fef68d9cf2379d25264d6948af1dbdea3259b",
          "isActive": false,
          "label": "Built-in Audio Analog Stereo",
        },
        Object {
          "id": "6d4096a33f2ba164d976a9929c3936b2956644e0581085c8870c4272782db9fb",
          "isActive": true,
          "label": "Plantronics C320 Analog Stereo",
        },
        Object {
          "id": "807fbf9ab5fd57290d125721e10edaab372b2c52569513de20934e0a14971957",
          "isActive": false,
          "label": "USG PnIXAu20o  Analog Stereo",
        },
      ]
    }
    label={
      Object {
        "defaultMessage": "Voice",
        "id": "app.containers.AudioOutputMenu.voice",
      }
    }
    setDeviceAsActive={[Function]}
  />
</Fragment>
`;

exports[`<AudioOutputMenu /> renders the audio output menu when crmModule is zendesk in desktop mode 1`] = `
<Fragment>
  <DeviceMenu
    audio="media"
    devices={
      Array [
        Object {
          "id": "default",
          "isActive": false,
          "label": "Default",
        },
        Object {
          "id": "aead4bb457d9b0aeeddb669d8e6fef68d9cf2379d25264d6948af1dbdea3259b",
          "isActive": false,
          "label": "Built-in Audio Analog Stereo",
        },
        Object {
          "id": "6d4096a33f2ba164d976a9929c3936b2956644e0581085c8870c4272782db9fb",
          "isActive": false,
          "label": "Plantronics C320 Analog Stereo",
        },
        Object {
          "id": "807fbf9ab5fd57290d125721e10edaab372b2c52569513de20934e0a14971957",
          "isActive": true,
          "label": "USG PnIXAu20o  Analog Stereo",
        },
      ]
    }
    label={
      Object {
        "defaultMessage": "Media",
        "id": "app.containers.AudioOutputMenu.media",
      }
    }
    setDeviceAsActive={[Function]}
  />
  <DeviceMenu
    audio="ringtone"
    devices={
      Array [
        Object {
          "id": "default",
          "isActive": false,
          "label": "Default",
        },
        Object {
          "id": "aead4bb457d9b0aeeddb669d8e6fef68d9cf2379d25264d6948af1dbdea3259b",
          "isActive": false,
          "label": "Built-in Audio Analog Stereo",
        },
        Object {
          "id": "6d4096a33f2ba164d976a9929c3936b2956644e0581085c8870c4272782db9fb",
          "isActive": false,
          "label": "Plantronics C320 Analog Stereo",
        },
        Object {
          "id": "807fbf9ab5fd57290d125721e10edaab372b2c52569513de20934e0a14971957",
          "isActive": true,
          "label": "USG PnIXAu20o  Analog Stereo",
        },
      ]
    }
    label={
      Object {
        "defaultMessage": "Ringtone",
        "id": "app.containers.AudioOutputMenu.ringtone",
      }
    }
    setDeviceAsActive={[Function]}
  />
  <DeviceMenu
    audio="voice"
    devices={
      Array [
        Object {
          "id": "default",
          "isActive": false,
          "label": "Default",
        },
        Object {
          "id": "aead4bb457d9b0aeeddb669d8e6fef68d9cf2379d25264d6948af1dbdea3259b",
          "isActive": false,
          "label": "Built-in Audio Analog Stereo",
        },
        Object {
          "id": "6d4096a33f2ba164d976a9929c3936b2956644e0581085c8870c4272782db9fb",
          "isActive": true,
          "label": "Plantronics C320 Analog Stereo",
        },
        Object {
          "id": "807fbf9ab5fd57290d125721e10edaab372b2c52569513de20934e0a14971957",
          "isActive": false,
          "label": "USG PnIXAu20o  Analog Stereo",
        },
      ]
    }
    label={
      Object {
        "defaultMessage": "Voice",
        "id": "app.containers.AudioOutputMenu.voice",
      }
    }
    setDeviceAsActive={[Function]}
  />
</Fragment>
`;

exports[`<AudioOutputMenu /> renders the audio output menu when crmModule is zendesk in toolbar mode 1`] = `
<Fragment>
  <DeviceMenu
    audio="media"
    devices={
      Array [
        Object {
          "id": "default",
          "isActive": false,
          "label": "Default",
        },
        Object {
          "id": "aead4bb457d9b0aeeddb669d8e6fef68d9cf2379d25264d6948af1dbdea3259b",
          "isActive": false,
          "label": "Built-in Audio Analog Stereo",
        },
        Object {
          "id": "6d4096a33f2ba164d976a9929c3936b2956644e0581085c8870c4272782db9fb",
          "isActive": false,
          "label": "Plantronics C320 Analog Stereo",
        },
        Object {
          "id": "807fbf9ab5fd57290d125721e10edaab372b2c52569513de20934e0a14971957",
          "isActive": true,
          "label": "USG PnIXAu20o  Analog Stereo",
        },
      ]
    }
    label={
      Object {
        "defaultMessage": "Media",
        "id": "app.containers.AudioOutputMenu.media",
      }
    }
    setDeviceAsActive={[Function]}
  />
  <DeviceMenu
    audio="ringtone"
    devices={
      Array [
        Object {
          "id": "default",
          "isActive": false,
          "label": "Default",
        },
        Object {
          "id": "aead4bb457d9b0aeeddb669d8e6fef68d9cf2379d25264d6948af1dbdea3259b",
          "isActive": false,
          "label": "Built-in Audio Analog Stereo",
        },
        Object {
          "id": "6d4096a33f2ba164d976a9929c3936b2956644e0581085c8870c4272782db9fb",
          "isActive": false,
          "label": "Plantronics C320 Analog Stereo",
        },
        Object {
          "id": "807fbf9ab5fd57290d125721e10edaab372b2c52569513de20934e0a14971957",
          "isActive": true,
          "label": "USG PnIXAu20o  Analog Stereo",
        },
      ]
    }
    label={
      Object {
        "defaultMessage": "Ringtone",
        "id": "app.containers.AudioOutputMenu.ringtone",
      }
    }
    setDeviceAsActive={[Function]}
  />
  <DeviceMenu
    audio="voice"
    devices={
      Array [
        Object {
          "id": "default",
          "isActive": false,
          "label": "Default",
        },
        Object {
          "id": "aead4bb457d9b0aeeddb669d8e6fef68d9cf2379d25264d6948af1dbdea3259b",
          "isActive": false,
          "label": "Built-in Audio Analog Stereo",
        },
        Object {
          "id": "6d4096a33f2ba164d976a9929c3936b2956644e0581085c8870c4272782db9fb",
          "isActive": true,
          "label": "Plantronics C320 Analog Stereo",
        },
        Object {
          "id": "807fbf9ab5fd57290d125721e10edaab372b2c52569513de20934e0a14971957",
          "isActive": false,
          "label": "USG PnIXAu20o  Analog Stereo",
        },
      ]
    }
    label={
      Object {
        "defaultMessage": "Voice",
        "id": "app.containers.AudioOutputMenu.voice",
      }
    }
    setDeviceAsActive={[Function]}
  />
</Fragment>
`;

exports[`<AudioOutputMenu /> renders the audio output menu when devices lists are empty 1`] = `
<Fragment>
  <DeviceMenu
    audio="media"
    devices={Array []}
    label={
      Object {
        "defaultMessage": "Media",
        "id": "app.containers.AudioOutputMenu.media",
      }
    }
    setDeviceAsActive={[Function]}
  />
  <DeviceMenu
    audio="ringtone"
    devices={Array []}
    label={
      Object {
        "defaultMessage": "Ringtone",
        "id": "app.containers.AudioOutputMenu.ringtone",
      }
    }
    setDeviceAsActive={[Function]}
  />
  <DeviceMenu
    audio="voice"
    devices={Array []}
    label={
      Object {
        "defaultMessage": "Voice",
        "id": "app.containers.AudioOutputMenu.voice",
      }
    }
    setDeviceAsActive={[Function]}
  />
</Fragment>
`;

exports[`<AudioOutputMenu /> renders the audio output menu when notifications are not enabled 1`] = `
<Fragment>
  <DeviceMenu
    audio="media"
    devices={
      Array [
        Object {
          "id": "default",
          "isActive": false,
          "label": "Default",
        },
        Object {
          "id": "aead4bb457d9b0aeeddb669d8e6fef68d9cf2379d25264d6948af1dbdea3259b",
          "isActive": false,
          "label": "Built-in Audio Analog Stereo",
        },
        Object {
          "id": "6d4096a33f2ba164d976a9929c3936b2956644e0581085c8870c4272782db9fb",
          "isActive": false,
          "label": "Plantronics C320 Analog Stereo",
        },
        Object {
          "id": "807fbf9ab5fd57290d125721e10edaab372b2c52569513de20934e0a14971957",
          "isActive": true,
          "label": "USG PnIXAu20o  Analog Stereo",
        },
      ]
    }
    label={
      Object {
        "defaultMessage": "Media",
        "id": "app.containers.AudioOutputMenu.media",
      }
    }
    setDeviceAsActive={[Function]}
  />
  <DeviceMenu
    audio="ringtone"
    devices={
      Array [
        Object {
          "id": "default",
          "isActive": false,
          "label": "Default",
        },
        Object {
          "id": "aead4bb457d9b0aeeddb669d8e6fef68d9cf2379d25264d6948af1dbdea3259b",
          "isActive": false,
          "label": "Built-in Audio Analog Stereo",
        },
        Object {
          "id": "6d4096a33f2ba164d976a9929c3936b2956644e0581085c8870c4272782db9fb",
          "isActive": false,
          "label": "Plantronics C320 Analog Stereo",
        },
        Object {
          "id": "807fbf9ab5fd57290d125721e10edaab372b2c52569513de20934e0a14971957",
          "isActive": true,
          "label": "USG PnIXAu20o  Analog Stereo",
        },
      ]
    }
    label={
      Object {
        "defaultMessage": "Ringtone",
        "id": "app.containers.AudioOutputMenu.ringtone",
      }
    }
    setDeviceAsActive={[Function]}
  />
  <DeviceMenu
    audio="voice"
    devices={
      Array [
        Object {
          "id": "default",
          "isActive": false,
          "label": "Default",
        },
        Object {
          "id": "aead4bb457d9b0aeeddb669d8e6fef68d9cf2379d25264d6948af1dbdea3259b",
          "isActive": false,
          "label": "Built-in Audio Analog Stereo",
        },
        Object {
          "id": "6d4096a33f2ba164d976a9929c3936b2956644e0581085c8870c4272782db9fb",
          "isActive": true,
          "label": "Plantronics C320 Analog Stereo",
        },
        Object {
          "id": "807fbf9ab5fd57290d125721e10edaab372b2c52569513de20934e0a14971957",
          "isActive": false,
          "label": "USG PnIXAu20o  Analog Stereo",
        },
      ]
    }
    label={
      Object {
        "defaultMessage": "Voice",
        "id": "app.containers.AudioOutputMenu.voice",
      }
    }
    setDeviceAsActive={[Function]}
  />
</Fragment>
`;
